--- a/config/neat.ini
+++ b/config/neat.ini
@@ -66,7 +66,11 @@ weight_mutate_rate      = 0.8
 weight_replace_rate     = 0.1
 
 # Prompt evolution rate (probability a genome rewrites the prompt)
-prompt_mutate_rate      = 0.35
+[PromptGenome]
+prompt_mutate_rate = 0.30
+mutate_model = llama3.2:3b
+mutate_temperature = 0.8
+
 
 [DefaultSpeciesSet]
 compatibility_threshold = 3.0
