--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 runs/
 cpkts/
-model/__pycache__
-data/__pycache__
-llms/__pycache__
-utils/__pycache__
+model/__pycache__/
+data/__pycache__/
+llms/__pycache__/
+utils/__pycache__/
