--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
 
-numpy
-pandas
-scikit-learn
-sentence-transformers
-neat-python
-langchain-ollama
-tqdm
-pyyaml
-openpyxl
+datasets>=2.20.0
+sentence-transformers>=2.6.0
+langchain-ollama>=0.1.0
+neat-python>=0.92
+numpy>=1.24.0
+pyyaml>=6.0.0
