feature/added a loader function for truthfulqa_eleutherai_mc dataset

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,6 +1,6 @@
 neat_config: config/neat.ini
 data:
-  dataset: truthfulqa_hf
+  dataset: truthfulqa_eleutherai_mc
   split: validation
   subset: multiple_choice
   seed: 42
