--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-datasets>=2.19.0
-transformers>=4.41.0
-torch
-sentence-transformers>=2.2.2
-neat-python>=0.92
-tqdm
+datasets
+transformers
+sentence-transformers
+neat-python
 numpy
+torch
+scikit-learn
 pytest
